--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-less": "0.11.1",
     "grunt-contrib-coffee": "~0.10.1",
-    "github": "~0.2.3"
+    "promise": "~6.0.1"
   },
   "scripts": {
     "start": "node app.js",
