--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "start": "node app.js",
     "debug": "node debug app.js",
-    "dev": "nodemon app -i .tmp/ assets/"
+    "dev": "nodemon app -i .tmp/ assets/ views/"
   },
   "main": "app.js",
   "repository": {
