--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-less": "0.11.1",
     "grunt-contrib-coffee": "~0.10.1",
-    "promise": "~6.0.1"
+    "promise": "~6.0.1",
+    "async-foreach": "0.1.3"
   },
   "scripts": {
     "start": "node app.js",
